Revision history for Math-BigNum

0.13    2016-xx-xx
        - Stricter validation of the precision specified as an import value.

0.12    2016-05-10
        - Decreased the default floating-point precision from 256 bits, to 200 bits.
        - Added support for specifying the default precision as an import value.

            Example:
                use Math::BigNum PREC => 1024;

        - Fixed a minor-bug in the method `is_pow` for some special cases.
        - Minor POD fixes.

0.11    2016-04-10
        - Added the `$n->parts` method, which returns the numerator and the denominator as BigNum objects.
        - Increased the default accuracy value for the method `is_prime` from 12 to 20.
        - Support for rational exponentiation with an integer power.

            Example:
                (3/5)**3 == 27/125

        - Added the `$x->li` method for computing the logarithmic integral of `$x`.
        - Optimized the `$k->root($n)` method for positive integer values of `$n`.
        - Added the `$n->bernreal` method, which returns the nth-Bernoulli number as a floating-point value.
        - Added the `$n->kronecker($k)` method, which returns the Kronecker symbol (n|k).
        - Added the following exportable functions:

                + factorial(n)       # product of first n integers: n!
                + primorial(n)       # product of primes <= n
                + binomial(n,k)      # binomial coefficient
                + fibonacci(n)       # nth-Fibonacci number
                + lucas(n)           # nth-Lucas number
                + ipow(a,k)          # integer exponentiation: int(a^k)

        - Added the method `$n->popcount`, which returns the number of 1s in the binary representation of `$n`.
        - Changed the return values of the `sign` method from ("-", "", "+") to (-1, 0, 1).
        - Added the `:all` option to export anything that is exportable (functions + constants).