@@ -2,6 +2,9 @@ Revision history for Math-BigNum
 
 0.13    2016-xx-xx
         - Stricter validation of the precision specified as an import value.
+        - Minor bug-fix in the method `is_pow` for `is_pow(-1, odd_n)` -- not it returns `1`.
+        - Fixed some special cases in the method `iroot`.
+        - Fixed a special case in the method `valuation` when the second argument is 0.
 
 0.12    2016-05-10
         - Decreased the default floating-point precision from 256 bits, to 200 bits.
